@@ -17,23 +17,20 @@
 
 package org.openqa.selenium.remote.http;
 
-import static com.google.common.net.HttpHeaders.CONTENT_LENGTH;
 import static java.net.HttpURLConnection.HTTP_CLIENT_TIMEOUT;
-import static java.net.HttpURLConnection.HTTP_GATEWAY_TIMEOUT;
 import static java.net.HttpURLConnection.HTTP_INTERNAL_ERROR;
 import static java.net.HttpURLConnection.HTTP_UNAVAILABLE;
 import static org.openqa.selenium.internal.Debug.getDebugLogLevel;
 import static org.openqa.selenium.remote.http.Contents.asJson;
 
-import com.google.common.collect.ImmutableMap;
 import dev.failsafe.Failsafe;
 import dev.failsafe.Fallback;
 import dev.failsafe.RetryPolicy;
 import dev.failsafe.event.ExecutionAttemptedEvent;
 import dev.failsafe.function.CheckedFunction;
 import java.net.ConnectException;
+import java.util.Map;
 import java.util.logging.Logger;
-import org.openqa.selenium.TimeoutException;
 
 public class RetryRequest implements Filter {
 
@@ -57,22 +54,14 @@ public class RetryRequest implements Filter {
                       e.getAttemptCount()))
           .build();
 
-  // Retry on read timeout.
-  private static final RetryPolicy<HttpResponse> readTimeoutPolicy =
-      RetryPolicy.<HttpResponse>builder()
-          .handle(TimeoutException.class)
-          .withMaxRetries(3)
-          .onRetry(
-              e -> LOG.log(getDebugLogLevel(), "Read timeout #{0}. Retrying.", e.getAttemptCount()))
-          .build();
-
   // Retry if server is unavailable or an internal server error occurs without response body.
   private static final RetryPolicy<HttpResponse> serverErrorPolicy =
       RetryPolicy.<HttpResponse>builder()
           .handleResultIf(
               response ->
                   response.getStatus() == HTTP_INTERNAL_ERROR
-                      && Integer.parseInt((response).getHeader(CONTENT_LENGTH)) == 0)
+                      && Integer.parseInt((response).getHeader(HttpHeader.ContentLength.getName()))
+                          == 0)
           .handleResultIf(response -> (response).getStatus() == HTTP_UNAVAILABLE)
           .withMaxRetries(2)
           .onRetry(
@@ -88,7 +77,6 @@ public class RetryRequest implements Filter {
     return req ->
         Failsafe.with(fallback)
             .compose(serverErrorPolicy)
-            .compose(readTimeoutPolicy)
             .compose(connectionFailurePolicy)
             .get(() -> next.execute(req));
   }
@@ -100,24 +88,16 @@ public class RetryRequest implements Filter {
       if (exception.getCause() instanceof ConnectException) {
         return new HttpResponse()
             .setStatus(HTTP_CLIENT_TIMEOUT)
-            .setContent(
-                asJson(ImmutableMap.of("value", ImmutableMap.of("message", "Connection failure"))));
-      } else if (exception instanceof TimeoutException) {
-        return new HttpResponse()
-            .setStatus(HTTP_GATEWAY_TIMEOUT)
-            .setContent(
-                asJson(ImmutableMap.of("value", ImmutableMap.of("message", "Read timeout"))));
+            .setContent(asJson(Map.of("value", Map.of("message", "Connection failure"))));
       } else throw exception;
     } else if (executionAttemptedEvent.getLastResult() != null) {
       HttpResponse response = executionAttemptedEvent.getLastResult();
       if ((response.getStatus() == HTTP_INTERNAL_ERROR
-              && Integer.parseInt(response.getHeader(CONTENT_LENGTH)) == 0)
+              && Integer.parseInt(response.getHeader(HttpHeader.ContentLength.getName())) == 0)
           || response.getStatus() == HTTP_UNAVAILABLE) {
         return new HttpResponse()
             .setStatus(response.getStatus())
-            .setContent(
-                asJson(
-                    ImmutableMap.of("value", ImmutableMap.of("message", "Internal server error"))));
+            .setContent(asJson(Map.of("value", Map.of("message", "Internal server error"))));
       }
     }
     return executionAttemptedEvent.getLastResult();
